[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Blobs/Blob Hat/Standing/Layer 2_sprite_3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Blobs/Blob Hat/Standing/Layer 2_sprite_4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Blobs/Blob Hat/Standing/Layer 2_sprite_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Blobs/Blob Hat/Standing/Layer 2_sprite_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Abilities/Zimp/Returning/sprite_0.png" type="Texture" id=6]
[ext_resource path="res://Assets/Abilities/Zimp/Projectile shadow/sprite_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Abilities/Zimp/Projectile shadow/sprite_1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Abilities/Zimp/Standing/sprite_1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Abilities/Zimp/Projectile shadow/sprite_0.png" type="Texture" id=10]
[ext_resource path="res://Abilities/Zimp.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
} ]

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/sprite_0.png-2df341c13d22965a1018b16c503a368d.stex"

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 4.74028
height = 18.8425

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.59997

[node name="Zimp" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 11 )

[node name="Moving" type="Node2D" parent="."]
z_index = 5

[node name="Shadow" type="AnimatedSprite" parent="Moving"]
scale = Vector2( 0.7, 0.5 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="Moving" type="AnimatedSprite" parent="Moving"]
frames = SubResource( 2 )
animation = "normal"
frame = 2
playing = true

[node name="Standing" type="Area2D" parent="."]
visible = false
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="StandingAnimation" type="AnimatedSprite" parent="Standing"]
frames = SubResource( 4 )
frame = 1
playing = true

[node name="StandingCollision" type="CollisionShape2D" parent="Standing"]
position = Vector2( -0.374573, -9.98062e-16 )
rotation = 1.5708
shape = SubResource( 5 )
disabled = true

[node name="Returning" type="Area2D" parent="."]
visible = false
z_index = 5
__meta__ = {
"_edit_group_": true
}

[node name="ReturningAnimation" type="AnimatedSprite" parent="Returning"]
frames = SubResource( 6 )

[node name="ReturningCollision" type="CollisionShape2D" parent="Returning"]
position = Vector2( -0.624293, -1.66345e-15 )
rotation = 1.5708
shape = SubResource( 7 )
disabled = true

[connection signal="body_entered" from="Standing" to="." method="_on_Standing_body_entered"]
[connection signal="body_entered" from="Returning" to="." method="_on_Returning_body_entered"]
